# rust-jni-javafx-example

./: Cargo.toml  build_jar.bat
src/java/: App.java
src/rust/: main.rs
